k8s/webhook-configuration-mutating.yaml
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: opa-mutating-webhook
webhooks:
  - name: mutating-webhook.openpolicyagent.org
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["dogs"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRREpSNUl5NllVTFFEQU5CZ2txaGtpRzl3MEJBUXNGQURBWE1SVXdFd1lEVlFRRERBeGgKWkcxcGMzTnBiMjVmWTJFd0lCY05NVGd4TWpJME1EY3dNREl6V2hnUE1qSTVNakV3TURnd056QXdNak5hTUJjeApGVEFUQmdOVkJBTU1ER0ZrYldsemMybHZibDlqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU1pUXVaQ3hKbmRxWU4zcXVjblNRbDViWHpBaGZ4Si9pNTlTMytRWFB2bEVTQUlrWWswTVJpZTAKd2wrWEtMaENsOG5nNmt4TklKS1ZKK0M3MVYweWlHNXN1allYei94UUtHcXVzMVBGWHY3MVFvRUxhOGlqM3pCVgpETG1ZU3pzM1FS [...]
      service:
        namespace: opa
        name: opa
